Add workaround for gtk file chooser filter patterns

Summary:
Gtk can use filter patterns, looking like "*.[Pp][Nn][Gg]" to handle all possible lowercase/uppercase
variants. This is unfortunately not supported by KDE/Qt dialogs so we should try to convert it to
just "*.png" instead. There are other possible patterns, but this is probably the most common one.

BUG: 399889

Reviewers: broulik, davidedmundson

Reviewed By: davidedmundson

Subscribers: heikobecker, ngraham, davidedmundson, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D17677